# nextwave

./: .gitignore  CMakeLists.txt  Makefile  calibration.py  config.json  config_ok.json  defaults.py  develop_boxes.ipynb  engine.cpp  examine_shmem.ipynb  extract_memory.py  fit_circle.py  functions_grid.py  image_helpers.py  iterative.py  layout_boxes.h  layout_log.h  make.bat  make_build_time.py  make_exe.bat  memory_layout.h  nextwave_code.py  nextwave_comm.py  nextwave_defaults.py  nextwave_plugin.cpp  nextwave_plugin.hpp  nextwave_sockets.py  nextwave_ui.py  nextwave_ui_create.py  nextwave_widgets.py  offline.py  plugin.h  plugin_test1.cpp  plugin_test2.cpp  requirements.txt  run.bat  runbash.sh  runonce.bat  show_qt.py  socket.cpp  (+2 more)
dev/: Untitled2.ipynb  Untitled3.ipynb  develop_boxes.ipynb  examine_shmem.ipynb  shmem_modal.ipynb  shmem_modal_clean.ipynb  shmem_recalibrate.ipynb  shmem_zernikes.ipynb  tifftags.ipynb
devel/: Untitled.ipynb  develop_boxes.ipynb  examine_shmem.ipynb
plugin_alpao/: CMakeLists.txt  plugin_alpao.cpp
plugin_centroiding/: CMakeLists.txt  plugin_centroiding.cpp
plugin_fileplayer/: CMakeLists.txt  plugin_fileplayer.cpp
plugin_flir/: Acquisition.cpp  CMakeLists.txt  add_spinnaker.cmake
plugin_rawplayer/: CMakeLists.txt  plugin_rawplayer.cpp
plugin_ximea/: CMakeLists.txt  FindXIMEA.cmake  add_executable.cmake  add_xiapi.cmake  main.cpp  plugin_ximea.cpp
